# CodeDesign

./: .gitignore  learning.go
SimpleFactory/: shapeInterface.go
Singleton/: singleton.go
cppDesign/: CMakeLists.txt  test_design.sln  test_design.vcxproj  test_design.vcxproj.filters
cppDesign/code/: README.md
cppDesign/code/main/: codeDesign.cpp
cppDesign/code/src/: State.cpp  State.h  builder.h  factory.h  iterator.h  observe.h
cppDesign/test/test_command/: CMakeLists.txt  test_command.cpp
cppDesign/test/test_decorator/: CMakeLists.txt  test_decorator.cpp
cppDesign/test/test_iterator/: CMakeLists.txt  test_iterator.cpp
cppDesign/test/test_observer/: CMakeLists.txt  test_observer.cpp
cppDesign/test/test_state/: CMakeLists.txt  test_state.cpp
goDesign/SimpleFactory/: shapeFactory.go
goDesign/code/SimpleFactory/: circle.go  square.go
